--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
         <link href="styles/icofont/icofont.css" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-        <title>Best Valorant Clips in 2020 for you!</title>
+        <title>VALORANT edits - making you fame in 2020</title>
         <meta name="author" content="Tom Schneider">
         <meta name="publisher" content="Tom Schneider">
         <meta name="copyright" content="Viktor Karich & bootstrapmade">
-        <meta name="description" content="We are promising you Valorant montages that blow you away. High-quality editing, amazing sound engineering, and colors from tomorrow. Our rating shows every day: We are making our clients happy.">
+        <meta name="description" content="We are promising you VALORANT edits that blow you away. High-quality cutting, on point sound engineering, and colors from tomorrow.">
         <meta name="keywords" content="Valorant, clips, editing, beta, riot, riot, games, montage, frags, split, haven, bind, cypher, phoenix, raze, breach, omen, viper, brimstone, radiant, valorant, game, glitch, bug">
         <meta name="page-topic" content="Dienstleistung">
         <meta name="page-type" content="Produktinfo">
-        <meta name="audience" content="all"><meta http-equiv="content-language" content="en">
+        <meta name="audience" content="all">
+        <meta http-equiv="content-language" content="en">
         <meta name="robots" content="index, follow">
         <meta name="DC.Creator" content="Tom Schneider">
         <meta name="DC.Publisher" content="Tom Schneider">
@@ -44,7 +45,7 @@
                   <a class="nav-item nav-link" href="#mypromise">My Promise</a>
                   <a class="nav-item nav-link" href="#taste">Taste</a>
                   <a class="nav-item nav-link" href="#pricing">Pricing</a>
-                  <a class="nav-item nav-link" href="#contact">Contact</a>
+                  <a class="nav-item nav-link" href="#buy">Buy</a>
                   <a href="#mypromise" class="nav-item nav-link get-started-btn scrollto">Get Started</a>
                 </div>
               </div>
@@ -60,7 +61,7 @@
                 <div class="w-100">
                   <div class="video-text">
                     <h1 class="display-4">THE HOME OF VALORANT MONTAGES</h1>
-                    <h3 class="lead">LEVEL-UP YOURSELF</p>
+                    <h3 class="lead">By using my service you translate your frags into <b>ART</b>.</p>
                   </div>
                 </div>
               </div>
@@ -110,7 +111,7 @@
               </section>
 
     <!-- ======= About Video Section ======= -->
-    <section id="about-video" class="about-video">
+    <section id="taste" class="about-video">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -122,13 +123,11 @@
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
-            <h2>This could be your next clip. Interested?</h2>
+            <div class="section-title">
+              <h2>Translating frags into art</h2>
+              </div>
             <p>
-              My promise to you is a fragmovie that blows away everybody who is watching it. I am one of the view movie editors who started creating professional Valorant clips since the beta was published. 
-              At the moment I am working on 3 clips on average per day and have a 5 star rating on fiver. 
-              You can read a view recommendations on my fiverr page. 
-              <br>
-              Summarized: I promise quality and deliver quality. 
+              <a href="https://beta.playvalorant.com/de-de/">VALORANT</a> frags can be aestethical if you add the right speed, sound and colors to it.<br><br> Collaborating with me stands for 100% professional service, unexpected quality and short delivery times. <br><br> I see my projects as small pieces of a bigger Puzzle within the VALORANT community. So lean back and enjoy the first taste of my work. 
             </p>
           </div>
 
@@ -273,7 +272,7 @@
       </section><!-- End Pricing Section -->
 
 
-      <section id="cta" class="cta">
+      <section id="buy" class="cta">
         <div class="container" data-aos="zoom-in">
           <div class="text-center">
             <h3>Why not buying right now?</h3>
