added the sitemap

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <link href="styles/venobox.css" rel="stylesheet">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <title>VALORANT edits - making you fame in 2020</title>
+        <title>VALORANT edits - High quality montages for you</title>
         <meta name="author" content="Tom Schneider">
         <meta name="publisher" content="Tom Schneider">
         <meta name="copyright" content="Viktor Karich & bootstrapmade">
         <meta name="description" content="We are promising you VALORANT edits that blow you away. High-quality cutting, on point sound engineering, and colors from tomorrow.">
-        <meta name="keywords" content="Valorant, clips, editing, beta, riot, riot, games, montage, frags, split, haven, bind, cypher, phoenix, raze, breach, omen, viper, brimstone, radiant, valorant, game, glitch, bug">
+        <meta name="keywords" content="VALORANT, clips, editing, beta, riot, riotgames, montage, frags, split, haven, bind, cypher, phoenix, raze, breach, omen, viper, brimstone, radiant, valorant, game, fps, shooter">
         <meta name="page-topic" content="Dienstleistung">
         <meta name="page-type" content="Produktinfo">
         <meta name="audience" content="all">
