--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
+        <link rel="stylesheet" type="text/css" href="styles/aos.css">
         <link href="styles/venobox.css" rel="stylesheet">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+        <!--- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"--->
+        <!--- <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'--->
         <title>VALORANT edits - High quality montages for you</title>
         <meta name="author" content="Tom Schneider">
         <meta name="publisher" content="Tom Schneider">
