--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="styles/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
-        <link rel="stylesheet" type="text/css" href="styles/aos.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href="styles/venobox.css" rel="stylesheet">
         <title>VALORANT edits - High quality montages for you</title>
         <meta name="author" content="Tom Schneider">
@@ -115,7 +115,7 @@
 
           <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
             <div class="embed-responsive embed-responsive-16by9">
-              <!--- <iframe width="560" height="315" src="https://www.youtube.com/embed/aelVdvtzNCQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --->
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/aelVdvtzNCQ" allowfullscreen></iframe>
             </div>
           </div>
 
