--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta name="page-type" content="Produktinfo">
         <meta name="audience" content="all">
         <meta http-equiv="content-language" content="en">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="index, follow">
         <meta name="DC.Creator" content="Tom Schneider">
         <meta name="DC.Publisher" content="Tom Schneider">
