meta tags and utf adaption for privacy police and disclaimer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <meta name="DC.Rights" content="Viktor Karich & bootstrapmade">
         <meta name="DC.Description" content="We are promising you Valorant montages that blow you away. High-quality editing, amazing sound engineering, and colors from tomorrow. Our rating shows every day: We are making our clients happy.">
         <meta name="DC.Language" content="en">
+        <meta charset="utf-8"/>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166905618-1"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
