--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <meta name="DC.Language" content="en">
         <meta charset="utf-8"/>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166905618-1"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
