using a https cookie banner

--- a/index.html
+++ b/index.html
@@ -371,10 +371,7 @@
 </footer><!-- End Footer -->
 
 
-    <!--Start Cookie Script-->
-<script type="text/javascript" charset="UTF-8" src="http://chs03.cookie-script.com/s/e8028c3aa445a928334d30d1d85a02ce.js"></script>
-<!--End Cookie Script-->
-</footer>
+<link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#fff0ca","text":"#000000","border":"#e0bc57"},"button":{"background":"#e0bc57","text":"#ffffff"}},"content":{"href":"https://valorantedits.com/dsgvo.html"}})});</script>
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
