--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       
               <div class="section-title">
                 <h2>My Promise</h2>
-                <p>I promise you a thorough thought Valorant Clip that takes away your breath during the first 15 seconds of watching. I am focused on composing your frags with state of the art editing and sound engineering to make you even shine more as soon as people watch your movie.</p>
+                <p>I promise you a thorough thought Valorant Clip that takes away your breath during the first 15 seconds of watching. I am focused on composing your frags with state of the art editing and sound engineering to make you shine even more as soon as people watch your movie.</p>
               </div>
       
               <div class="row">
