testimonals text deleted

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         <meta name="DC.Description" content="We are promising you Valorant montages that blow you away. High-quality editing, amazing sound engineering, and colors from tomorrow. Our rating shows every day: We are making our clients happy.">
         <meta name="DC.Language" content="en">
         <meta charset="utf-8"/>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166905618-1"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167967682-1"></script>
         <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-166905618-1');</script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-167967682-1');
+        </script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -143,7 +146,6 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>We should just let my customers speak for me.</p>
         </div>
 
         <div class="row">
